route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: portal-server
  namespace: unified-hybrid-cloud
spec:
  host: cloud.127.0.0.1.nip.io
  to:
    kind: Service
    name: portal-server
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
    caCertificate: |-
      -----BEGIN CERTIFICATE-----
      MIIFGzCCAwOgAwIBAgIUI7RBMIJxHVodaZo5ZI9JRnGCT2QwDQYJKoZIhvcNAQEL
[...]
      xoWsv/WDLHvBqCQrifVB
      -----END CERTIFICATE-----
    certificate: |-
      -----BEGIN CERTIFICATE-----
      MIIFGzCCAwOgAwIBAgIUI7RBMIJxHVodaZo5ZI9JRnGCT2QwDQYJKoZIhvcNAQEL
[...]
      xoWsv/WDLHvBqCQrifVB
      -----END CERTIFICATE-----
    key: |-
      ***REMOVED***
