template.yml
#
# Copyright (c) 2018 Red Hat, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

# This file contains an OpenShift template that creates all the objects needed
# for a working installation of the application. See the `template.sh` file for
# an example of how to use it.

---

apiVersion: v1
kind: Template
metadata:
  name: unified-hybrid-cloud-portal
  annotations:
    description: "Unified Hybrid Cloud Portal"

parameters:

- name: API_URL
  description: URL for the API server.

- name: DOMAIN
  description: The DNS domain where the route will be created.

- name: IMAGE_PULL_POLICY
  description: Image pull policy.

- name: IMAGE_TAG
  description: Tag of the image, including the registry and the version.

- name: NAMESPACE
  description: The namespace where the objects will be created.

- name: KEYCLOAK_REALM
  description: Keycloak authentication realm.

- name: KEYCLOAK_RESOURCE
  description: Keycloak authentication resource.

- name: KEYCLOAK_URL
  description: URL for the Keycloak server.

- name: VERSION
  description: The version of the project.

objects:

- apiVersion: v1
  kind: ConfigMap
  metadata:
    name: portal-config
  data:

    httpd.conf: |-
      [...]
- apiVersion: v1
  kind: ConfigMap
  metadata:
    name: webapp-config
  data:
    config.json: |-
      {
        "apiGateway": "${API_URL}",
        "keycloak": {
          "realm": "${KEYCLOAK_REALM}",
          "clientId": "${KEYCLOAK_RESOURCE}",
          "url": "${KEYCLOAK_URL}"
        }
      }

- apiVersion: apps/v1beta1
  kind: Deployment
  metadata:
    name: portal-server
    labels:
      app: portal-server
  spec:
    selector:
      matchLabels:
        app: portal-server
    replicas: 1
    template:
      metadata:
        labels:
          app: portal-server
      spec:
        volumes:
        - name: config
          configMap:
            name: portal-config
            items:
            - key: httpd.conf
              path: conf/httpd.conf
        - name: webapp-config
          configMap:
            name: webapp-config
        containers:
        - name: server
          image: ${IMAGE_TAG}
          imagePullPolicy: ${IMAGE_PULL_POLICY}
          volumeMounts:
          - name: config
            mountPath: /etc/httpd
          - name: webapp-config
            mountPath: /var/www/html/config
          command:
          - /usr/sbin/httpd
          args:
          - -D
          - FOREGROUND

- apiVersion: v1
  kind: Service
  metadata:
    name: portal-server
    labels:
      app: portal-server
  spec:
    selector:
      app: portal-server
    ports:
    - port: 8000
      targetPort: 8000

- apiVersion: v1
  kind: Route
  metadata:
    name: portal-server
  spec:
    host: ${DOMAIN}
    to:
      kind: Service
      name: portal-server
    tls:
      termination: edge
